add socialmedia to website

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-
+    <link rel="website icon" type="png" href="./img/famous-restaurant-logo-zip1-file/png/logo-black-removebg-preview.png">
     <title>Famous Restaurant</title>
 </head>
 <body>
@@ -87,14 +87,21 @@ Elevate your everyday moments with the refined flavors of our Cucumber Mint Fizz
     <div class="spacer layer1"></div>
     <div class="container">
         <div class="footer-disc col-xs-10" >    
-          <p>Famous Restaurant is a haven for those seeking elegant yet down-to-earth vegan soft drinks. With a focus on quality and simplicity, our sparkling apple cider, blueberry lemonade, and cucumber mint fizz are crafted with care and available worldwide. Whether enjoyed alone or with friends, our beverages add a touch of sophistication to any occasion, making them the perfect choice for those who appreciate finer things in life. Come savor the refreshing flavors and elevate your drinking experience at Famous Restaurant. <a href="" style="color: white;">(Read more)</a></p>
+  
+  <p>Famous Restaurant is a haven for those seeking elegant yet down-to-earth vegan soft drinks. With a focus on quality and simplicity, our sparkling apple cider, blueberry lemonade, and cucumber mint fizz are crafted with care and available worldwide. Whether enjoyed alone or with friends, our beverages add a touch of sophistication to any occasion, making them the perfect choice for those who appreciate finer things in life. Come savor the refreshing flavors and elevate your drinking experience at Famous Restaurant. <a href="">(Read more)</a></p>
+          
         </div>
         <div class="footer-img col-xs-2">
         <img src="img/famous-restaurant-logo-zip1-file/png/logo-white-removebg-preview.png" alt="" class="image-fluid">          
       </div>
      </div>
+     <div class="social container-fluid">
+            <a target="_blank" href="https://github.com/HosseinLotfalipoor"><i class="fab fa-github"></i></a>
+            <a target="_blank" href="https://www.instagram.com/hl.frontend"><i class="fab fa-instagram"></i></a>
+            <a target="_blank" href="https://t.me/HosseinLotfalipoor"><i class="fa-solid fa-paper-plane"></i></a>
+          </div>
       <div class="site-copy-right container-fluid">
-        <p>&copy; All the rights of this site are reserved for Famous Restaurant and any copying without mentioning the source is prohibited.</p>
+        <p>&copy; All the rights of this site are reserved for Hossein Lotfalipoor and any copying without mentioning the source is prohibited.</p>
       </div>
   </footer>
 
