change images bg color

--- a/index.html
+++ b/index.html
@@ -85,13 +85,13 @@ Elevate your everyday moments with the refined flavors of our Cucumber Mint Fizz
 
   <footer class="container-fluid">
     <div class="spacer layer1"></div>
-    <div class="container">
-        <div class="footer-disc col-xs-10" >    
+    <div class="container row">
+        <div class="footer-disc col-xs-12 col-sm-12 col-lg-6" >    
   
   <p>Famous Restaurant is a haven for those seeking elegant yet down-to-earth vegan soft drinks. With a focus on quality and simplicity, our sparkling apple cider, blueberry lemonade, and cucumber mint fizz are crafted with care and available worldwide. Whether enjoyed alone or with friends, our beverages add a touch of sophistication to any occasion, making them the perfect choice for those who appreciate finer things in life. Come savor the refreshing flavors and elevate your drinking experience at Famous Restaurant. <a href="">(Read more)</a></p>
           
         </div>
-        <div class="footer-img col-xs-2">
+        <div class="col-xs-12 col-sm-12 footer-img col-lg-6">
         <img src="img/famous-restaurant-logo-zip1-file/png/logo-white-removebg-preview.png" alt="" class="image-fluid">          
       </div>
      </div>
